# Industrial_C

./: CMakeLists.txt  README.md  readme.md
include/raiiaction/: raiiaction.hpp
libsrc/raiiaction/: CMakeLists.txt
libsrc/raiiaction/src/: raiiaction.cpp
projects/main/: CMakeLists.txt
projects/main/src/: main.cpp
testsuite/libsrc/raiiaction/: CMakeLists.txt
testsuite/libsrc/raiiaction/src/: UnitTest.cpp
testsuite/projects/main/: integrate_tests.py
